# EditionMetadonnees

./: CMakeLists.txt  EditionMetadonnees.doxyfile  EditionMetadonnees.pro  README.md
doc/: EditionMetadonnees.doxyfile
include/: Data.h  DocumentationWindow.h  MP3File.h  MainWindow.h  QTableWidgetImproved.h  Settings.h  Tools.h
interfaces/: MainWindow.ui
resources/: Ressources.qrc
ressources/: Ressources.qrc
source/: Data.cpp  DocumentationWindow.cpp  EditionMetadonnees.cpp  MP3File.cpp  MainWindow.cpp  QTableWidgetImproved.cpp  Settings.cpp  Tools.cpp
